Fix logo in dark mode

--- a/src/css/tabs-dark/landing-dark.css
+++ b/src/css/tabs-dark/landing-dark.css
@@ -15,10 +15,6 @@
     color: white;
 }
 
-.tab-landing .logowrapper img {
-    background: #f3f3f357;
-}
-
 .sponsors li a:hover {
     color: #393b3a;
 }
